Native file mode - 1